--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  border-top: 10px solid rgb(0, 148, 148);
+}
+
+.container {
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid rgb(0, 148, 148);
+  border-bottom: 5px solid rgb(0, 148, 148);
+  padding: 50px 0px;
+  width: 500px;
+}
+
 h1,
 h2,
 h3,
@@ -5,6 +43,13 @@ h4,
 p,
 li {
   font-family: sans-serif;
+  color: #444444;
+}
+
+h1,
+h2,
+h3 {
+  color: rgb(0, 148, 148);
 }
 
 h1 {
@@ -15,10 +60,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -30,16 +78,88 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
 }
 
-footer p {
+li:last-child {
+  margin-bottom: 0;
+}
+/* footer p {
+  font-size: 16px;
+} */
+
+/* article header p {
+  font-style: italic;
+} */
+
+#author {
+  font-style: italic;
+  font-size: 18px;
+}
+
+#copyright {
   font-size: 16px;
 }
 
-article header p {
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* ul {
+  list-style: none;
+} */
+
+.related {
+  list-style: none;
+}
+
+/* .special {
+  color: rgb(229, 100, 2);
+} */
+
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
   font-style: italic;
+}
+
+/* li:nth-child(2) {
+  color: red;
+} */
+
+a:link {
+  color: rgb(229, 100, 2);
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(229, 100, 2);
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline;
+}
+/* 
+a:active {
+} */
+
+.post-image {
+  width: 100%;
+  height: auto;
 }
