--- a/style.css
+++ b/style.css
@@ -1,165 +1,297 @@
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
+/* 
+MAIN COLOR: #087f5b
+GREY COLOR: #343a40
+*/
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
+/* ------------------------ */
+/* GENERAL STYLES */
+/* ------------------------ */
 body {
-  border-top: 10px solid rgb(0, 148, 148);
+  font-family: "Inter", sans-serif;
+  color: #343a40;
+  border-bottom: 8px solid #087f5b;
 }
 
 .container {
-  width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 960px;
+  margin: 0 auto;
 }
 
-.main-header {
-  background-color: #f7f7f7;
-  padding: 20px 40px;
-  margin-bottom: 60px;
-  height: 80px;
-}
-
-article {
-  margin-bottom: 60px;
-}
-
-.post-header {
-  margin-bottom: 40px;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid rgb(0, 148, 148);
-  border-bottom: 5px solid rgb(0, 148, 148);
-  padding: 50px 0px;
-  width: 500px;
-}
-
-h1,
-h2,
-h3,
-h4,
-p,
-li {
-  font-family: sans-serif;
-  color: #444444;
-}
-
-h1,
-h2,
-h3 {
-  color: rgb(0, 148, 148);
-}
-
-h1 {
-  font-size: 26px;
-  text-transform: uppercase;
-  font-style: italic;
+header,
+section {
+  margin-bottom: 96px;
 }
 
 h2 {
-  font-size: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 48px;
+  font-size: 36px;
+  letter-spacing: -0.5px;
+  /* 24 / 30 / 36 */
 }
 
-h3 {
-  font-size: 30px;
-  margin-bottom: 20px;
-  margin-top: 40px;
+.grid-3-cols {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 80px;
 }
 
-h4 {
-  font-size: 20px;
-  text-transform: uppercase;
+.grid-3-cols-2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 80px;
+  position: relative;
+}
+
+a.credits2 {
+  color: white;
+  text-decoration: none;
+  font-size: 10px;
+  font-style: italic;
+  display: block;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  position: absolute;
+  bottom: -32px;
+  left: 50px;
+}
+
+a.credits2:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.work-exp {
   text-align: center;
 }
 
-p {
-  font-size: 22px;
-  line-height: 1.5;
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+
+  display: inline-block;
+  border-radius: 100px;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+
+.btn--big {
+  font-size: 18px;
+  padding: 16px 32px;
+}
+
+.btn--small {
+  font-size: 14px;
+  padding: 8px 12px;
+}
+
+img {
+  border-radius: 12px;
+}
+
+/* ------------------------ */
+/* COMPONENT STYLES */
+/* ------------------------ */
+
+/* HEADER */
+header {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 80px;
+  margin-top: 64px;
+}
+
+.header-text-box {
+  align-self: center;
+}
+
+h1 {
+  margin-bottom: 32px;
+  font-size: 50px;
+  line-height: 1.1;
+  letter-spacing: -1px;
+  /* 44 / 52 / 62 */
+
+  /* text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); */
+}
+
+.header-text {
+  margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 1.7;
+}
+
+.header-text2 {
+  margin-bottom: 30px;
+  font-size: 18px;
+  line-height: 1.7;
+}
+
+.hobbies {
+  text-align: center;
+}
+
+a.credits {
+  color: grey;
+  text-decoration: none;
+  font-size: 12px;
+  font-style: italic;
+  display: block;
+  text-align: center;
+  margin-top: 5px;
   margin-bottom: 15px;
 }
 
-ul,
-ol {
-  margin-left: 50px;
+a.credits:hover {
+  color: grey;
+  text-decoration: underline;
+}
+
+img {
+  width: 100%;
+}
+
+/* FEATURES */
+.features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 24px;
+}
+
+.features-title {
+  margin-bottom: 16px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.features-text {
+  font-size: 15px;
+  line-height: 1.7;
+}
+
+/* TESTIMONIAL */
+.testimonial-section {
+  background-color: #087f5b;
+  color: #fff;
+  padding: 24px;
+  border-radius: 12px;
+}
+
+.testimonial-box {
+  grid-column: 2 / -1;
+  align-self: center;
+}
+
+.testimonial-box h2 {
+  margin-bottom: 10px;
+  /* 20 / 24 / 30 */
+  font-size: 26px;
+}
+
+.testimonial-text {
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 1.7;
+  color: white;
+  margin-top: 20px;
+}
+
+.testimonial-author {
+  color: #c3fae8;
+  font-style: italic;
+}
+
+/* CHAIRS */
+.chair {
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.chair-box {
+  padding: 32px;
+  height: 475px;
+  position: relative;
+}
+
+h3 {
+  margin-bottom: 24px;
+  font-size: 20px;
+}
+
+.chair-details {
+  list-style: none;
+  margin-bottom: 48px;
+}
+
+.chair-details li {
+  display: flex;
+  align-items: center;
+  gap: 12px;
   margin-bottom: 20px;
 }
 
-li {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-li:last-child {
+.chair-details li:last-child {
   margin-bottom: 0;
 }
-/* footer p {
-  font-size: 16px;
-} */
 
-/* article header p {
-  font-style: italic;
-} */
-
-#author {
-  font-style: italic;
-  font-size: 18px;
+.chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
-#copyright {
-  font-size: 16px;
+.chair-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  position: absolute;
+  bottom: 30px;
+  left: 40px;
 }
 
-.related-author {
-  font-size: 18px;
-  font-weight: bold;
+footer {
+  margin-bottom: 48px;
+  font-size: 14px;
+  color: #495057;
 }
 
-/* ul {
-  list-style: none;
-} */
-
-.related {
-  list-style: none;
+.chair-details {
+  text-align: left;
 }
 
-/* .special {
-  color: rgb(229, 100, 2);
-} */
-
-li:first-child {
-  font-weight: bold;
-}
-
-li:last-child {
-  font-style: italic;
-}
-
-/* li:nth-child(2) {
-  color: red;
-} */
-
-a:link {
-  color: rgb(229, 100, 2);
-  text-decoration: none;
-}
-
-a:visited {
-  color: rgb(229, 100, 2);
-}
-
-a:hover {
-  color: orangered;
-  font-weight: bold;
-  text-decoration: underline;
-}
-/* 
-a:active {
-} */
-
-.post-image {
-  width: 100%;
-  height: auto;
+.staytune {
+  background-color: rgb(20, 148, 148);
+  color: #fff;
+  padding: 24px;
+  border-radius: 12px;
+  margin-top: 60px;
+  text-align: left;
 }
