--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ footer {
   display: flex;
   align-items: center;
   gap: 4.8rem;
-  color: navy;
+  color: rgb(35, 35, 48);
   margin: auto auto;
 }
 
@@ -381,3 +381,43 @@ footer {
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 } */
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* .home {
+  font-size: 30px;
+  position: fixed;
+} */
+
+.home {
+  position: fixed;
+  display: flex;
+  background-color: rgb(246, 240, 240);
+  align-items: center;
+  gap: 4.8rem;
+  color: rgb(35, 35, 48);
+  margin: auto auto;
+  font-size: 20px;
+  right: 200px;
+  padding: 10px 10px;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+/* .home:link,
+.home:visited {
+  display: block;
+  color: rgb(35, 35, 48);
+  font-weight: 500;
+  font-size: 28px;
+  transition: all 0.3s;
+  padding: 10px 10px;
+  border-radius: 10px;
+} */
+
+.home:hover,
+.home:active {
+  color: navy;
+}
