--- a/hobbies/style.css
+++ b/hobbies/style.css
@@ -183,3 +183,21 @@ nav .navbar .nav-items li a:hover {
   width: 80%;
   padding-left: 20%;
 }
+
+.back {
+  margin-top: 20px;
+  margin-left: 70px;
+  color: white;
+  font-size: 1.1em;
+  font-style: bold;
+  font-weight: 600px;
+  padding: 10px 22px;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.back a:hover {
+  color: white;
+  background: #1abc9c;
+  padding: 10px 22px;
+}
