--- a/hobbies/style.css
+++ b/hobbies/style.css
@@ -33,7 +33,7 @@ nav .navbar .nav-items {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
+  width: 80%;
 }
 
 nav .navbar .nav-items li {
@@ -86,7 +86,7 @@ nav .navbar .nav-items li a:hover {
 }
 
 .container {
-  margin: 100px 80px 0px 80px;
+  margin: 30px 80px 0px 80px;
 }
 
 .container h2 {
@@ -137,21 +137,38 @@ nav .navbar .nav-items li a:hover {
   background: #1abc9c;
 }
 
-.grid-3-cols {
+/* .grid-3-cols {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 210px;
-}
+} */
 
-.images {
+/* .images {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   opacity: 90%;
   position: relative;
+} */
+
+.images {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-top: 50px;
 }
 
-.exercise {
+.images img {
+  border-radius: 8px;
+}
+
+.images li {
+  list-style: none;
+}
+
+/* .exercise {
   position: absolute;
   left: 10%;
   border-radius: 8px;
@@ -167,13 +184,13 @@ nav .navbar .nav-items li a:hover {
   position: absolute;
   right: 9%;
   border-radius: 8px;
-}
+} */
 
-.container .title {
+/* .container .title {
   color: white;
   margin-top: 20px;
   text-align: center;
-}
+} */
 
 .container .text {
   color: white;
@@ -185,7 +202,7 @@ nav .navbar .nav-items li a:hover {
 }
 
 .back {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-left: 70px;
   color: white;
   font-size: 1.1em;
@@ -200,4 +217,79 @@ nav .navbar .nav-items li a:hover {
   color: white;
   background: #1abc9c;
   padding: 10px 22px;
+}
+
+.credits {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 12px;
+}
+
+.credits li {
+  list-style: none;
+}
+
+.credits li a {
+  text-decoration: none;
+  font-size: 1.1em;
+  font-weight: 500;
+  color: white;
+  transition: all 0.3s;
+}
+
+.credits li a:hover {
+  color: #1abc9c;
+  background-color: white;
+  padding: 8px 8px;
+  border-radius: 8px;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+  font-size: 22px;
+  color: white;
+}
+
+.title li {
+  list-style: none;
+}
+
+.text {
+  margin-top: 30px;
+  font-size: 14px;
+  color: white;
+}
+
+.text li {
+  list-style: none;
+}
+
+.column1 {
+  float: left;
+  width: 33.333%;
+  text-align: center;
+  padding-left: 150px;
+}
+.column3 {
+  float: right;
+  width: 33.333%;
+  text-align: center;
+  padding-right: 150px;
+}
+.column2 {
+  display: inline-block;
+  width: 33.333%;
+  text-align: center;
+  padding-left: 75px;
+  padding-right: 75px;
 }
