--- a/hobbies/style.css
+++ b/hobbies/style.css
@@ -151,21 +151,30 @@ nav .navbar .nav-items li a:hover {
   position: relative;
 } */
 
-.images {
+/* .images {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
   margin-top: 50px;
-}
+} */
 
-.images img {
+.grid img {
   border-radius: 8px;
 }
 
 .images li {
   list-style: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 5fr 1fr 2fr auto;
+  justify-items: center;
+  align-items: center;
+  gap: 10px;
 }
 
 /* .exercise {
@@ -202,8 +211,7 @@ nav .navbar .nav-items li a:hover {
 }
 
 .back {
-  margin-top: 40px;
-  margin-left: 70px;
+  margin-top: 20px;
   color: white;
   font-size: 1.1em;
   font-style: bold;
@@ -219,7 +227,7 @@ nav .navbar .nav-items li a:hover {
   padding: 10px 22px;
 }
 
-.credits {
+/* .credits {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -228,28 +236,43 @@ nav .navbar .nav-items li a:hover {
   margin-top: 5px;
   margin-bottom: 5px;
   font-size: 12px;
-}
-
+} */
+/* 
 .credits li {
   list-style: none;
-}
+} */
 
-.credits li a {
+.grid a {
   text-decoration: none;
-  font-size: 1.1em;
+  font-size: 0.8em;
   font-weight: 500;
   color: white;
   transition: all 0.3s;
 }
 
-.credits li a:hover {
+.grid div {
+  font-size: 1.5em;
+  color: white;
+}
+
+.grid p {
+  font-size: 1.1em;
+  color: white;
+}
+
+.grid a:hover {
   color: #1abc9c;
   background-color: white;
   padding: 8px 8px;
   border-radius: 8px;
 }
 
-.title {
+.gridtext {
+  align-self: start;
+  padding: 0 4rem;
+}
+
+/* .title {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -262,7 +285,7 @@ nav .navbar .nav-items li a:hover {
 
 .title li {
   list-style: none;
-}
+} */
 
 .text {
   margin-top: 30px;
@@ -274,7 +297,7 @@ nav .navbar .nav-items li a:hover {
   list-style: none;
 }
 
-.column1 {
+/* .column1 {
   float: left;
   width: 33.333%;
   text-align: center;
@@ -292,4 +315,4 @@ nav .navbar .nav-items li a:hover {
   text-align: center;
   padding-left: 75px;
   padding-right: 75px;
-}
+} */
