--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ nav .navbar .nav-items li a:hover {
   position: absolute;
   margin-top: 100px;
   left: 60%;
-  width: 25%;
-  height: 60%;
+  width: 400px;
+  height: 500px;
   object-fit: cover;
   border-radius: 20px;
   opacity: 90%;
