--- a/work/style.css
+++ b/work/style.css
@@ -86,7 +86,7 @@ nav .navbar .nav-items li a:hover {
 }
 
 .container {
-  margin: 100px 80px 0px 80px;
+  margin: 40px 80px 0px 80px;
 }
 
 .container h2 {
@@ -145,12 +145,19 @@ nav .navbar .nav-items li a:hover {
   padding: 0;
   position: relative;
   width: 250px;
+  height: 400px;
   perspective: 1000px;
   transition: all 0.5s ease-in-out;
 }
 
+.box .content div {
+  font-size: 13px;
+  text-align: left;
+  margin-top: 10px;
+}
+
 .box:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   box-shadow: 1px 2px 10px 5px solid #000;
 }
 .box .box-img {
@@ -202,7 +209,8 @@ nav .navbar .nav-items li a:hover {
 
 .box .button {
   background: none;
-  top: 0;
+  font-size: 16px;
+  top: 185px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -236,7 +244,7 @@ nav .navbar .nav-items li a:hover {
 }
 
 .back {
-  margin-top: 50px;
+  margin-top: 0;
   margin-left: 70px;
   color: white;
   font-size: 1.1em;
