--- a/queries.css
+++ b/queries.css
@@ -1,4 +1,4 @@
-@media (max-width: 1200px) {
+@media (max-width: 544px) {
   html {
     font-size: 50%;
   }
@@ -121,8 +121,270 @@
     position: absolute;
     margin-top: 100px;
     left: 60%;
-    width: 20%;
+    width: 30%;
     height: 40%;
+    border-radius: 20px;
+    opacity: 90%;
+  }
+}
+
+@media screen and (min-width: 545px) and (max-width: 944px) {
+  html {
+    font-size: 75%;
+  }
+
+  /* MOBILE NAVIGATION */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 9999;
+  }
+
+  .nav-items {
+    background-color: red;
+    background-color: rgba(24, 21, 21, 0.8);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* width: 1200px; */
+    height: 100vh;
+    transform: translateX(100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
+
+    /* Hide navigation */
+    /* Allows NO transitions at all */
+    /* display: none; */
+
+    /* 1) Hide it visually */
+    opacity: 0;
+
+    /* 2) Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+
+    /* 3) Hide it from screen readers */
+    visibility: hidden;
+    z-index: 998;
+  }
+  .nav-items li {
+    margin-top: 20px;
+  }
+
+  .nav-open .nav-items {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  nav .navbar .nav-items {
+    flex-direction: column;
+    justify-content: start;
+    width: 100%;
+  }
+
+  .nav-items:link,
+  .nav-items:visited {
+    font-size: 3rem;
+  }
+
+  .container {
+    margin-top: 5%;
+    margin-left: 5%;
+  }
+
+  .container h2 {
+    color: white;
+    font-size: 1.5em;
+    font-weight: 700px;
+    text-transform: uppercase;
+    word-spacing: 7px;
+    width: 100%;
+  }
+
+  .p1,
+  .p2 {
+    color: white;
+    font-size: 1em;
+    font-weight: 400px;
+    width: 60%;
+    padding-top: 25px;
+  }
+
+  .p3 {
+    color: white;
+    font-size: 1em;
+    font-weight: 400px;
+    width: 60%;
+    padding-bottom: 25px;
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .container a {
+    color: black;
+    font-size: 1em;
+    font-style: bold;
+    font-weight: 600px;
+    background: white;
+    padding: 10px 22px;
+    text-decoration: none;
+    transition: all 0.3s;
+  }
+
+  .container a:hover {
+    color: white;
+    background: #1abc9c;
+  }
+
+  .DKYF {
+    position: absolute;
+    margin-top: 100px;
+    left: 60%;
+    width: 30%;
+    height: 40%;
+    border-radius: 20px;
+    opacity: 90%;
+  }
+}
+
+@media screen and (min-width: 945px) and (max-width: 1200px) {
+  html {
+    font-size: 90%;
+  }
+
+  /* MOBILE NAVIGATION */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 9999;
+  }
+
+  .nav-items {
+    /* background-color: blue; */
+    background-color: rgba(24, 21, 21, 0.8);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* width: 1200px; */
+    height: 100vh;
+    transform: translateX(100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
+
+    /* Hide navigation */
+    /* Allows NO transitions at all */
+    /* display: none; */
+
+    /* 1) Hide it visually */
+    opacity: 0;
+
+    /* 2) Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+
+    /* 3) Hide it from screen readers */
+    visibility: hidden;
+    z-index: 998;
+  }
+  .nav-items li {
+    margin-top: 20px;
+  }
+
+  .nav-open .nav-items {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  nav .navbar .nav-items {
+    flex-direction: column;
+    justify-content: start;
+    width: 100%;
+  }
+
+  .nav-items:link,
+  .nav-items:visited {
+    font-size: 3rem;
+  }
+
+  .container {
+    margin-top: 5%;
+    margin-left: 5%;
+  }
+
+  .container h2 {
+    color: white;
+    font-size: 1.5em;
+    font-weight: 700px;
+    text-transform: uppercase;
+    word-spacing: 7px;
+    width: 100%;
+  }
+
+  .p1,
+  .p2 {
+    color: white;
+    font-size: 1em;
+    font-weight: 400px;
+    width: 60%;
+    padding-top: 25px;
+  }
+
+  .p3 {
+    color: white;
+    font-size: 1em;
+    font-weight: 400px;
+    width: 60%;
+    padding-bottom: 25px;
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .container a {
+    color: black;
+    font-size: 1em;
+    font-style: bold;
+    font-weight: 600px;
+    background: white;
+    padding: 10px 22px;
+    text-decoration: none;
+    transition: all 0.3s;
+  }
+
+  .container a:hover {
+    color: white;
+    background: #1abc9c;
+  }
+
+  .DKYF {
+    position: absolute;
+    margin-top: 100px;
+    left: 60%;
+    width: 30%;
+    height: 50%;
     border-radius: 20px;
     opacity: 90%;
   }
