--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
+  overflow: hidden;
 }
 
 nav {
@@ -91,7 +92,7 @@ nav .navbar .nav-items li a:hover {
 
 .container h2 {
   color: white;
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 700px;
   text-transform: uppercase;
   word-spacing: 7px;
