--- a/diving/queries.css
+++ b/diving/queries.css
@@ -130,12 +130,38 @@
     /* margin-top: 50px;
     margin-left: 5%; */
     /* left: 60%; */
-    width: 40%;
-    height: 25%;
+    width: 350px;
+    height: 100%;
     /* object-fit: cover; */
     border-radius: 20px;
     opacity: 90%;
+  }
+
+  .img2,
+  .img3,
+  .img4,
+  .img5 {
+    width: 200px;
+    border-radius: 20px;
+    opacity: 90%;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+    justify-content: center;
+    align-content: center;
     margin-top: 5%;
+  }
+
+  .grid-text1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .grid-text2 {
+    grid-column: 2/3;
+    grid-row: 2/3;
   }
 }
 
