--- a/motto/queries.css
+++ b/motto/queries.css
@@ -76,8 +76,8 @@
   }
 
   .container {
+    margin-top: 5%;
     margin-left: 5%;
-    margin-right: 5%;
   }
 
   .container h2 {
@@ -94,7 +94,7 @@
     color: white;
     font-size: 1em;
     font-weight: 400px;
-    width: 100%;
+    width: 80%;
     padding-top: 25px;
   }
 
@@ -102,7 +102,7 @@
     color: white;
     font-size: 1em;
     font-weight: 400px;
-    width: 100%;
+    width: 80%;
     padding-bottom: 25px;
     padding-top: 20px;
     margin-bottom: 20px;
@@ -123,50 +123,11 @@
     color: white;
     background: #1abc9c;
   }
-
-  .img1 {
-    /* position: absolute; */
-    /* margin-top: 50px;
-    margin-left: 5%; */
-    /* left: 60%; */
-    width: 250px;
-    height: 100%;
-    /* object-fit: cover; */
-    border-radius: 20px;
-    opacity: 90%;
-  }
-
-  .img2,
-  .img3,
-  .img4,
-  .img5 {
-    width: 150px;
-    border-radius: 20px;
-    opacity: 90%;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
-    justify-content: center;
-    align-content: center;
-    margin-top: 2%;
-  }
-
-  .grid-text1 {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-  .grid-text2 {
-    grid-column: 2/3;
-    grid-row: 2/3;
-  }
 }
 
 @media screen and (min-width: 545px) and (max-width: 944px) {
   html {
-    font-size: 85%;
+    font-size: 75%;
   }
 
   /* MOBILE NAVIGATION */
@@ -243,8 +204,8 @@
   }
 
   .container {
+    margin-top: 5%;
     margin-left: 5%;
-    margin-right: 5%;
   }
 
   .container h2 {
@@ -261,7 +222,7 @@
     color: white;
     font-size: 1em;
     font-weight: 400px;
-    width: 100%;
+    width: 80%;
     padding-top: 25px;
   }
 
@@ -269,7 +230,7 @@
     color: white;
     font-size: 1em;
     font-weight: 400px;
-    width: 100%;
+    width: 80%;
     padding-bottom: 25px;
     padding-top: 20px;
     margin-bottom: 20px;
@@ -291,49 +252,20 @@
     background: #1abc9c;
   }
 
-  .img1 {
-    /* position: absolute; */
-    /* margin-top: 50px;
-    margin-left: 5%; */
-    /* left: 60%; */
-    width: 400px;
-    height: 100%;
-    /* object-fit: cover; */
+  .DKYF {
+    position: absolute;
+    margin-top: 100px;
+    left: 60%;
+    width: 30%;
+    height: 40%;
     border-radius: 20px;
     opacity: 90%;
-  }
-
-  .img2,
-  .img3,
-  .img4,
-  .img5 {
-    width: 175px;
-    border-radius: 20px;
-    opacity: 90%;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
-    justify-content: center;
-    align-content: center;
-    margin-top: 5%;
-  }
-
-  .grid-text1 {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-  .grid-text2 {
-    grid-column: 2/3;
-    grid-row: 2/3;
   }
 }
 
 @media screen and (min-width: 945px) and (max-width: 1200px) {
   html {
-    font-size: 100%;
+    font-size: 90%;
   }
 
   /* MOBILE NAVIGATION */
@@ -410,8 +342,8 @@
   }
 
   .container {
+    margin-top: 5%;
     margin-left: 5%;
-    margin-right: 5%;
   }
 
   .container h2 {
@@ -428,7 +360,7 @@
     color: white;
     font-size: 1em;
     font-weight: 400px;
-    width: 100%;
+    width: 80%;
     padding-top: 25px;
   }
 
@@ -436,7 +368,7 @@
     color: white;
     font-size: 1em;
     font-weight: 400px;
-    width: 100%;
+    width: 80%;
     padding-bottom: 25px;
     padding-top: 20px;
     margin-bottom: 20px;
@@ -458,23 +390,12 @@
     background: #1abc9c;
   }
 
-  .img1 {
-    /* position: absolute; */
-    /* margin-top: 50px;
-    margin-left: 5%; */
-    /* left: 60%; */
-    width: 400;
-    height: 250;
-    /* object-fit: cover; */
-    border-radius: 20px;
-    opacity: 90%;
-  }
-
-  .img2,
-  .img3,
-  .img4,
-  .img5 {
-    width: 200px;
+  .DKYF {
+    position: absolute;
+    margin-top: 100px;
+    left: 60%;
+    width: 30%;
+    height: 50%;
     border-radius: 20px;
     opacity: 90%;
   }
