--- a/diving/queries.css
+++ b/diving/queries.css
@@ -154,6 +154,14 @@
     margin-top: 2%;
   }
 
+  .grid img,
+  .grid p {
+    justify-self: center;
+    align-self: center;
+    margin-top: 10px;
+    color: white;
+  }
+
   .grid-text1 {
     grid-column: 1/2;
     grid-row: 2/3;
@@ -319,6 +327,14 @@
     justify-content: center;
     align-content: center;
     margin-top: 5%;
+  }
+
+  .grid img,
+  .grid p {
+    justify-self: center;
+    align-self: center;
+    margin-top: 10px;
+    color: white;
   }
 
   .grid-text1 {
