--- a/diving/queries.css
+++ b/diving/queries.css
@@ -40,6 +40,7 @@
   }
   .nav-items li {
     margin-top: 20px;
+    font-size: 20px;
   }
 
   .nav-open .nav-items {
@@ -158,7 +159,7 @@
   .grid p {
     justify-self: center;
     align-self: center;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     color: white;
   }
 
@@ -184,7 +185,7 @@
   }
 
   .nav-items {
-    background-color: red;
+    /* background-color: red; */
     background-color: rgba(24, 21, 21, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
@@ -215,6 +216,7 @@
   }
   .nav-items li {
     margin-top: 20px;
+    font-size: 20px;
   }
 
   .nav-open .nav-items {
@@ -333,7 +335,7 @@
   .grid p {
     justify-self: center;
     align-self: center;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     color: white;
   }
 
@@ -390,6 +392,7 @@
   }
   .nav-items li {
     margin-top: 20px;
+    font-size: 20px;
   }
 
   .nav-open .nav-items {
