--- a/queries.css
+++ b/queries.css
@@ -40,6 +40,7 @@
   }
   .nav-items li {
     margin-top: 20px;
+    font-size: 20px;
   }
 
   .nav-open .nav-items {
@@ -178,6 +179,7 @@
   }
   .nav-items li {
     margin-top: 20px;
+    font-size: 20px;
   }
 
   .nav-open .nav-items {
@@ -316,6 +318,7 @@
   }
   .nav-items li {
     margin-top: 20px;
+    font-size: 20px;
   }
 
   .nav-open .nav-items {
