--- a/hobbies/queries.css
+++ b/hobbies/queries.css
@@ -104,7 +104,7 @@
 
   .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto 1fr 1fr;
     grid-template-rows: 1fr 0.3fr 1fr 0.3fr 1fr 0.3fr 0.1fr;
     justify-items: center;
     align-items: center;
