--- a/work/queries.css
+++ b/work/queries.css
@@ -14,8 +14,8 @@
   }
 
   .nav-items {
-    background-color: black;
-    /* background-color: rgba(24, 21, 21, 0.8); */
+    /* background-color: black; */
+    background-color: rgba(24, 21, 21, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     position: absolute;
@@ -245,8 +245,8 @@
   }
 
   .nav-items {
-    background-color: red;
-    /* background-color: rgba(24, 21, 21, 0.8); */
+    /* background-color: red; */
+    background-color: rgba(24, 21, 21, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     position: absolute;
@@ -470,8 +470,8 @@
   }
 
   .nav-items {
-    background-color: blue;
-    /* background-color: rgba(24, 21, 21, 0.8); */
+    /* background-color: blue; */
+    background-color: rgba(24, 21, 21, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     position: absolute;
