--- a/work/queries.css
+++ b/work/queries.css
@@ -4,7 +4,7 @@
   }
 
   body nav .navbar {
-    font-size: 125%;
+    font-size: 167%;
   }
 
   /* MOBILE NAVIGATION */
@@ -14,8 +14,8 @@
   }
 
   .nav-items {
-    /* background-color: black; */
-    background-color: rgba(24, 21, 21, 0.8);
+    background-color: red;
+    /* background-color: rgba(24, 21, 21, 0.8); */
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     position: absolute;
