--- a/work/queries.css
+++ b/work/queries.css
@@ -14,7 +14,7 @@
   }
 
   .nav-items {
-    background-color: red;
+    background-color: blue;
     /* background-color: rgba(24, 21, 21, 0.8); */
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
@@ -118,9 +118,17 @@
   }
 
   .box .content div {
-    font-size: 0.6em;
+    font-size: 0.4em;
     text-align: left;
     margin-top: 0.5em;
+  }
+
+  .box .content h4 {
+    font-size: 0.7em;
+  }
+
+  .box .content p {
+    font-size: 0.7em;
   }
 
   .box:hover {
