--- a/work/queries.css
+++ b/work/queries.css
@@ -4,7 +4,7 @@
   }
 
   body nav .navbar {
-    font-size: 250%;
+    font-size: 500%;
   }
 
   /* MOBILE NAVIGATION */
@@ -14,7 +14,7 @@
   }
 
   .nav-items {
-    background-color: red;
+    background-color: purple;
     /* background-color: rgba(24, 21, 21, 0.8); */
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
