--- a/work/queries.css
+++ b/work/queries.css
@@ -14,7 +14,7 @@
   }
 
   .nav-items {
-    background-color: red;
+    background-color: blue;
     /* background-color: rgba(24, 21, 21, 0.8); */
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
@@ -87,7 +87,7 @@
 
   .container h2 {
     color: white;
-    font-size: 4em;
+    font-size: 6em;
     font-weight: 700px;
     text-transform: uppercase;
     word-spacing: 7px;
@@ -118,17 +118,17 @@
   }
 
   .box .content div {
-    font-size: 10px;
+    font-size: 5px;
     text-align: left;
     margin-top: 0.5em;
   }
 
   .box .content h4 {
-    font-size: 15px;
+    font-size: 10px;
   }
 
   .box .content p {
-    font-size: 15px;
+    font-size: 10px;
   }
 
   .box:hover {
