--- a/work/queries.css
+++ b/work/queries.css
@@ -14,8 +14,8 @@
   }
 
   .nav-items {
-    background-color: blue;
-    /* background-color: rgba(24, 21, 21, 0.8); */
+    /* background-color: blue; */
+    background-color: rgba(24, 21, 21, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     position: absolute;
@@ -185,7 +185,7 @@
   .box .button {
     background: none;
     font-size: 0.8em;
-    top: -2em;
+    top: -2.5em;
     left: 0;
     width: 100%;
     height: 100%;
