--- a/CV/style.css
+++ b/CV/style.css
@@ -22,6 +22,8 @@ body {
 
 .starter {
   position: relative;
+  display: block;
+  overflow: hidden;
   padding: 75rem 0 0 0;
   /* height: 80%; */
   margin-bottom: 3rem;
@@ -229,4 +231,70 @@ body {
   font-size: 2rem;
   font-family: "Montserrat", sans-serif;
   text-align: center;
+}
+
+/* SLIDER */
+
+.slider__slide {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  font-weight: bold;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 1s;
+  opacity: 0;
+}
+
+.slider__slide.active {
+  opacity: 1;
+}
+
+.slider__nav-button {
+  position: absolute;
+  height: 5rem;
+  width: 5rem;
+  background: rgbA(128, 128, 128, 0.5);
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+#nav-button--prev {
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+#nav-button--next {
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+#nav-button--prev::after,
+#nav-button--next::after {
+  content: "";
+  position: absolute;
+  border: solid white;
+  border-width: 0 0.5rem 0.5rem 0;
+  display: inline-block;
+  padding: 0.2rem;
+  width: 40%;
+  height: 40%;
+}
+
+#nav-button--next::after {
+  top: 50%;
+  right: 50%;
+  transform: translate(25%, -50%) rotate(-45deg);
+}
+
+#nav-button--prev::after {
+  top: 50%;
+  right: 50%;
+  transform: translate(75%, -50%) rotate(135deg);
 }
