--- a/Brag/queries.css
+++ b/Brag/queries.css
@@ -80,6 +80,14 @@
     padding-left: 5rem;
   }
 
+  .v2 {
+    gap: 4rem;
+  }
+
+  .brag-introduction1 {
+    padding-top: 25rem;
+  }
+
   .header {
     padding: 0 5rem;
   }
