--- a/Brag/GrubFood/queries.css
+++ b/Brag/GrubFood/queries.css
@@ -223,10 +223,10 @@
   }
 
   .brag-introduction {
-    justify-content: space-between;
     display: flex;
     height: 80rem;
     flex-direction: column;
+    overflow: hidden;
   }
 
   .brag-introduction1 {
@@ -239,11 +239,12 @@
   }
 
   .craving-img {
-    width: 90rem;
-    height: 90rem;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: -1;
     opacity: 60%;
+    object-fit: cover;
   }
 
   .description {
