--- a/Macrosoft/queries.css
+++ b/Macrosoft/queries.css
@@ -2,9 +2,10 @@
   html {
     font-size: 55%;
   }
-  .header {
-    padding-left: 6rem;
-    padding-right: 6rem;
+  .header,
+  .footer {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .introduction {
@@ -13,7 +14,7 @@
   .intro-box {
     display: grid;
     grid-template-columns: 2fr 0.5fr;
-    padding-left: 6rem;
+    padding-left: 1rem;
     gap: 0;
   }
 
@@ -130,9 +131,10 @@
   }
 
   .introduction {
-    height: 52rem;
+    height: 60rem;
     padding-left: 0rem;
   }
+
   .intro-box {
     display: grid;
     grid-template-columns: 1fr;
@@ -151,12 +153,24 @@
 
   .intro-box img {
     height: 50rem;
-    padding-top: 10rem;
+    padding-top: 0;
+  }
+
+  .slider__slide {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 4rem;
+    width: 70rem;
+    height: 100%;
+    transition: 1s;
+    opacity: 0;
   }
 
   .slider__nav {
     position: absolute;
-    top: 80%;
+    top: 85%;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -164,7 +178,7 @@
 
   #nav-button--prev,
   #nav-button--next {
-    top: 80%;
+    top: 85%;
   }
 
   #nav-button--prev {
@@ -176,6 +190,8 @@
   }
 
   .selection {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin-top: 15rem;
     margin-bottom: 10rem;
   }
@@ -186,8 +202,8 @@
 
   .content {
     grid-template-columns: 1fr;
-    padding-left: 6rem;
-    padding-right: 6rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     row-gap: 6rem;
     font-size: 1.8rem;
     width: 100%;
@@ -199,8 +215,8 @@
 
   .games {
     grid-template-columns: 1fr;
-    padding-left: 6rem;
-    padding-right: 6rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .sub-games {
@@ -213,7 +229,7 @@
   }
 
   .games-img {
-    height: 50rem;
+    height: 30rem;
     width: 100%;
     opacity: 95%;
   }
