--- a/Macrosoft/queries.css
+++ b/Macrosoft/queries.css
@@ -123,7 +123,7 @@
   }
 
   .header {
-    background-color: red;
+    background-color: purple;
   }
 
   .left-header-boxes_v2 {
@@ -134,13 +134,14 @@
     height: 60rem;
     padding-left: 0rem;
     overflow-x: hidden;
+    width: 100%;
   }
 
   .intro-box {
     display: grid;
     grid-template-columns: 1fr;
     padding-left: 2rem;
-    height: 80rem;
+    height: 60rem;
   }
 
   .intro-sub-box {
@@ -153,7 +154,7 @@
   }
 
   .intro-box img {
-    height: 50rem;
+    width: 100%;
     padding-top: 0;
   }
 
@@ -170,7 +171,7 @@
 
   .slider__nav {
     position: absolute;
-    top: 85%;
+    top: 87.5%;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -178,15 +179,15 @@
 
   #nav-button--prev,
   #nav-button--next {
-    top: 85%;
+    top: 87.5%;
   }
 
   #nav-button--prev {
-    left: 40%;
+    left: 37.5%;
   }
 
   #nav-button--next {
-    right: 40%;
+    right: 37.5%;
   }
 
   .selection {
