--- a/Macrosoft/queries.css
+++ b/Macrosoft/queries.css
@@ -123,7 +123,7 @@
   }
 
   .header {
-    background-color: purple;
+    background-color: beige;
   }
 
   .left-header-boxes_v2 {
@@ -134,7 +134,7 @@
     height: 60rem;
     padding-left: 0rem;
     overflow-x: hidden;
-    width: 100%;
+    max-width: 100%;
   }
 
   .intro-box {
@@ -142,6 +142,7 @@
     grid-template-columns: 1fr;
     padding-left: 2rem;
     height: 60rem;
+    max-width: 80%;
   }
 
   .intro-sub-box {
@@ -154,7 +155,7 @@
   }
 
   .intro-box img {
-    width: 100%;
+    max-width: 80%;
     padding-top: 0;
   }
 
@@ -164,14 +165,13 @@
     justify-content: center;
     top: 0;
     left: 0;
-    width: 70rem;
     transition: 1s;
     opacity: 0;
   }
 
   .slider__nav {
     position: absolute;
-    top: 87.5%;
+    top: 90%;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -179,7 +179,7 @@
 
   #nav-button--prev,
   #nav-button--next {
-    top: 87.5%;
+    top: 90%;
   }
 
   #nav-button--prev {
@@ -193,7 +193,7 @@
   .selection {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 15rem;
+    margin-top: 10rem;
     margin-bottom: 10rem;
   }
 
@@ -238,7 +238,7 @@
 
 @media (max-width: 600px) {
   .selection {
-    margin-top: 15rem;
+    margin-top: 10rem;
     margin-bottom: 10rem;
   }
 }
