--- a/Macrosoft/queries.css
+++ b/Macrosoft/queries.css
@@ -123,7 +123,7 @@
   }
 
   .header {
-    background-color: beige;
+    background-color: blue;
   }
 
   .left-header-boxes_v2 {
@@ -142,7 +142,7 @@
     grid-template-columns: 1fr;
     padding-left: 2rem;
     height: 60rem;
-    max-width: 80%;
+    max-width: 100%;
   }
 
   .intro-sub-box {
@@ -155,7 +155,7 @@
   }
 
   .intro-box img {
-    max-width: 80%;
+    max-width: 100%;
     padding-top: 0;
   }
 
@@ -193,7 +193,7 @@
   .selection {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 10rem;
+    margin-top: 6rem;
     margin-bottom: 10rem;
   }
 
@@ -238,7 +238,7 @@
 
 @media (max-width: 600px) {
   .selection {
-    margin-top: 10rem;
+    margin-top: 6rem;
     margin-bottom: 10rem;
   }
 }
