--- a/Macrosoft/nav_arrow.css
+++ b/Macrosoft/nav_arrow.css
@@ -10,10 +10,10 @@
   justify-content: center;
   /* font-size: 50px;
   font-weight: bold; */
-  top: -5rem;
+  top: 5rem;
   left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   transition: 1s;
   opacity: 0;
 }
@@ -36,12 +36,14 @@
 }
 
 #nav-button--prev {
-  top: 80%;
+  top: 58rem;
+  /* top: 80% */
   left: 45%;
 }
 
 #nav-button--next {
-  top: 80%;
+  top: 58rem;
+  /* top: 80% */
   right: 45%;
 }
 
@@ -70,7 +72,8 @@
 
 .slider__nav {
   position: absolute;
-  top: 80%;
+  /* top: 80%; */
+  top: 58rem;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -105,6 +108,8 @@
   max-width: 100%;
   font-size: 1.2rem;
   font-family: "Noto Sans", sans-serif;
+  max-width: 200rem;
+  margin: 0 auto;
 }
 
 .footer img {
