--- a/Macrosoft/style.css
+++ b/Macrosoft/style.css
@@ -104,7 +104,6 @@ body {
   padding-left: 14rem;
   /* padding-right: 10rem; */
   gap: 10rem;
-  margin: 0 auto;
   width: 100%;
 }
 
@@ -114,6 +113,8 @@ body {
   gap: 2.6rem;
   justify-content: center;
   font-size: 1.6rem;
+  /* max-width: 100rem;
+  margin: 0 auto; */
 }
 
 .intro-box img {
@@ -176,7 +177,9 @@ body {
   padding-left: 8rem;
   padding-right: 8rem;
   column-gap: 3rem;
-  width: 100%;
+  /* width: 100%; */
+  max-width: 200rem;
+  margin: 0 auto;
   font-size: 1.4rem;
   padding-bottom: 10rem;
 }
@@ -224,7 +227,9 @@ body {
   grid-template-columns: 1fr 1.2fr;
   padding-left: 8rem;
   padding-right: 8rem;
-  width: 100%;
+  /* width: 100%; */
+  max-width: 200rem;
+  margin: 0 auto;
   font-size: 1.6rem;
   padding-bottom: 10rem;
   color: white;
@@ -267,4 +272,6 @@ body {
   font-weight: 600;
   margin-bottom: 2rem;
   padding-left: 8rem;
+  max-width: 200rem;
+  margin: 0 auto;
 }
