--- a/Macrosoft/style.css
+++ b/Macrosoft/style.css
@@ -245,7 +245,7 @@ body {
   background-color: #1a1a1a;
   height: 50rem;
   display: grid;
-  padding: 15rem 15rem 12rem 10rem;
+  padding: 10rem 10rem 10rem 10rem;
   row-gap: 0;
 }
 
@@ -272,6 +272,7 @@ body {
   font-weight: 600;
   margin-bottom: 2rem;
   padding-left: 8rem;
+  padding-bottom: 2rem;
   max-width: 200rem;
   margin: 0 auto;
 }
